--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
   
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
-    <script>
-      (function() {
-      var fl = document.createElement('script'); fl.type = 'text/javascript'; fl.async = true; fl.src = document.location.protocol + '//filamentapp.s3.amazonaws.com/35fc8b2c9631ba1913fb7848ce836e5b.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(fl, s);
-      })();
-    </script>
+<script type="text/javascript">(function() {
+  var fl = document.createElement('script'); fl.type = 'text/javascript'; fl.async = true; fl.src = document.location.protocol + '//filamentapp.s3.amazonaws.com/c53d6a03fd8594509058f8dd1b7f4b0a.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(fl, s);
+})();</script>
   </head>
   <body>
     <div class="header">
